--- a/src/components/sidebar/SideBar.css
+++ b/src/components/sidebar/SideBar.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     z-index: -1;
-    height: 100vh;
     text-align: center;
     background-color: black;
     color: white;
