--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 :root {
-  --viewport-height: 100vh;
   --clr-primary: #FF0101;
 
 }
@@ -7,7 +6,6 @@
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
